--- a/index.html
+++ b/index.html
@@ -27,6 +27,15 @@
       <input id="taskInput" type="text" placeholder="Add a new task..."
         class="flex-grow px-4 py-2 border rounded-xl focus:outline-none focus:ring-2 focus:ring-indigo-400 dark:bg-gray-800 dark:text-white" />
       <select id="priority" class="px-3 py-2 border rounded-xl dark:bg-gray-800 dark:text-white">
+
+     <!-- Category Selector -->
+  <select id="category" class="px-3 py-2 border rounded-xl dark:bg-gray-800 dark:text-white">
+    <option value="work">Work 💼</option>
+    <option value="personal">Personal 🏠</option>
+    <option value="school">School 📚</option>
+  </select>
+
+    <!-- Priority Selector -->
         <option value="low">Low 🔵</option>
         <option value="medium">Medium 🟡</option>
         <option value="high">High 🔴</option>
