--- a/index.html
+++ b/index.html
@@ -44,10 +44,20 @@
         class="bg-indigo-500 text-white px-4 py-2 rounded-xl hover:bg-indigo-600 transition">Add</button>
     </div>
 
+
     <!-- Search -->
     <input id="searchInput" type="text" placeholder="Search tasks..."
       class="w-full px-4 py-2 mb-4 border rounded-xl focus:ring-2 focus:ring-indigo-400 dark:bg-gray-800 dark:text-white" 
       oninput="renderTasks()" />
+
+      <!-- Category Filter -->
+<div class="flex justify-center gap-2 mb-4">
+  <button onclick="filterCategory('all')" class="px-3 py-1 rounded-lg bg-gray-200 dark:bg-gray-700 hover:bg-indigo-500 hover:text-white transition">All</button>
+  <button onclick="filterCategory('work')" class="px-3 py-1 rounded-lg bg-gray-200 dark:bg-gray-700 hover:bg-indigo-500 hover:text-white transition">Work</button>
+  <button onclick="filterCategory('personal')" class="px-3 py-1 rounded-lg bg-gray-200 dark:bg-gray-700 hover:bg-indigo-500 hover:text-white transition">Personal</button>
+  <button onclick="filterCategory('school')" class="px-3 py-1 rounded-lg bg-gray-200 dark:bg-gray-700 hover:bg-indigo-500 hover:text-white transition">School</button>
+</div>
+
 
     <!-- Task List -->
     <ul id="taskList" class="space-y-2"></ul>
