--- a/index.html
+++ b/index.html
@@ -74,6 +74,8 @@
 
       tasks
         .filter(task => task.text.toLowerCase().includes(searchValue))
+         &&(activeCategory === "all" || task.category === activeCategory)
+  
         .forEach((task, index) => {
           const li = document.createElement("li");
           li.className = "flex flex-col sm:flex-row sm:items-center justify-between bg-gray-100 dark:bg-gray-800 px-4 py-3 rounded-xl shadow hover:shadow-md transition";
