--- a/index.html
+++ b/index.html
@@ -22,30 +22,34 @@
       <button id="darkToggle" class="bg-gray-200 dark:bg-gray-700 px-3 py-1 rounded-xl text-sm hover:opacity-80 transition">🌙</button>
     </div>
 
-    <!-- Input Row -->
+   <!-- Input Row -->
 <div class="flex flex-col sm:flex-row gap-2 mb-4">
   <!-- Task Input -->
   <input id="taskInput" type="text" placeholder="Add a new task..."
     class="flex-grow px-4 py-2 border rounded-xl focus:outline-none focus:ring-2 focus:ring-indigo-400 dark:bg-gray-800 dark:text-white" />
 
-  <!-- Category Dropdown -->
-  <select id="category" class="px-3 py-2 border rounded-xl dark:bg-gray-800 dark:text-white">
-    <option value="work">💼 Work</option>
-    <option value="personal">🏠 Personal</option>
-    <option value="school">📚 School</option>
-  </select>
+  <!-- Right-side controls -->
+  <div class="flex gap-2">
+    <!-- Category Dropdown -->
+    <select id="category" class="px-3 py-2 border rounded-xl dark:bg-gray-800 dark:text-white">
+      <option value="work">💼 Work</option>
+      <option value="personal">🏠 Personal</option>
+      <option value="school">📚 School</option>
+    </select>
 
-  <!-- Priority Dropdown -->
-  <select id="priority" class="px-3 py-2 border rounded-xl dark:bg-gray-800 dark:text-white">
-    <option value="low">🔵 Low</option>
-    <option value="medium">🟡 Medium</option>
-    <option value="high">🔴 High</option>
-  </select>
+    <!-- Priority Dropdown -->
+    <select id="priority" class="px-3 py-2 border rounded-xl dark:bg-gray-800 dark:text-white">
+      <option value="low">🔵 Low</option>
+      <option value="medium">🟡 Medium</option>
+      <option value="high">🔴 High</option>
+    </select>
 
-  <!-- Add Button -->
-  <button onclick="addTask()"
-    class="bg-indigo-500 text-white px-4 py-2 rounded-xl hover:bg-indigo-600 transition">Add</button>
+    <!-- Add Button -->
+    <button onclick="addTask()"
+      class="bg-indigo-500 text-white px-4 py-2 rounded-xl hover:bg-indigo-600 transition">Add</button>
+  </div>
 </div>
+
 
 
     <!-- Search -->
