--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     }
   </script>
 </head>
-<body class="bg-white dark:bg-gray-900 shadow-2xl rounded-2xl 
-            w-full max-w-md sm:max-w-lg p-4 sm:p-6 
+<body class="bg-blue-200 dark:bg-gray-900 shadow-2xl rounded-2xl 
+            w-full max-w-md sm:max-w-lg p-4 sm:p-6 items-center mx-auto mt-10
             transition-all duration-300 hover:scale-[1.01]">
   <!-- Main Card -->
   <div class="bg-white dark:bg-gray-900 shadow-2xl rounded-2xl w-full max-w-xl p-6 transition-all duration-300 hover:scale-[1.01]">
@@ -27,12 +27,10 @@
 <div class="flex flex-col sm:flex-row items-center gap-2 p-4 w-full max-w-xl mx-auto">
   <!-- Task Input -->
   <input id="taskInput" type="text" placeholder="Add a new task..."
-     class="flex flex-col sm:flex-row gap-2">
-  <!-- <select class="w-full sm:w-auto">...</select>
-  <select class="w-full sm:w-auto">...</select> -->
+     class="flex-1 px-3 border rounded-xl dark:bg-gray-800 dark:text-white">
+  
 </div>
-  <!-- Right-side controls -->
-  <div class="flex gap-2">
+ 
     <!-- Category Dropdown -->
     <select id="category" class="px-3 py-2 border rounded-xl dark:bg-gray-800 dark:text-white">
       <option value="work">💼 Work</option>
@@ -49,7 +47,7 @@
 
     <!-- Add Button -->
     <button onclick="addTask()"
-      class="px-2 py-2 bg-indigo-500 text-white font-semibold rounded-lg hover:bg-indigo-600 transition-colors w-full sm:w-auto">Add</button>
+      class="px-2 py-2 bg-indigo-500 text-white font-semibold rounded-lg hover:bg-indigo-600 transition-colors w-full sm:w-auto wrap">Add</button>
   </div>
 </div>
 
