--- a/index.html
+++ b/index.html
@@ -27,19 +27,19 @@
 <div class="flex flex-col sm:flex-row items-center gap-2 p-4 w-full max-w-xl mx-auto">
   <!-- Task Input -->
   <input id="taskInput" type="text" placeholder="Add a new task..."
-     class="flex-1 px-3 border rounded-xl dark:bg-gray-800 dark:text-white">
+     class="flex-1 w-full px-3 py-2 border rounded-xl dark:bg-gray-800 dark:text-white">
   
 </div>
  
     <!-- Category Dropdown -->
-    <select id="category" class="px-3 py-2 border rounded-xl dark:bg-gray-800 dark:text-white">
+    <select id="category" class="w-full sm:w-auto px-3 py-2 border rounded-xl dark:bg-gray-800 dark:text-white">
       <option value="work">💼 Work</option>
       <option value="personal">🏠 Personal</option>
       <option value="school">📚 School</option>
     </select>
 
     <!-- Priority Dropdown -->
-    <select id="priority" class="px-3 py-2 border rounded-xl dark:bg-gray-800 dark:text-white">
+    <select id="priority" class="w-full sm:w-auto px-3 py-2 border rounded-xl dark:bg-gray-800 dark:text-white">
       <option value="low">🔵 Low</option>
       <option value="medium">🟡 Medium</option>
       <option value="high">🔴 High</option>
