--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
     <!-- Search -->
     <input id="searchInput" type="text" placeholder="Search tasks..."
-      class="w-full px-4 py-2 mb-4 border rounded-xl focus:ring-2 focus:ring-indigo-400 dark:bg-gray-800 dark:text-white" 
+      class="w-full px-4 py-2 mb-4 border gap-2 rounded-xl focus:ring-2 focus:ring-indigo-400 dark:bg-gray-800 dark:text-white" 
       oninput="renderTasks()" />
 
       <!-- Category Filter -->
@@ -87,17 +87,36 @@
 
 
       tasks
-        .filter(task => task.text.toLowerCase().includes(searchValue))
-         &&(activeCategory === "all" || task.category === activeCategory)
-  
-        .forEach((task, index) => {
-          const li = document.createElement("li");
-          li.className = "flex flex-col sm:flex-row sm:items-center justify-between bg-gray-100 dark:bg-gray-800 px-4 py-3 rounded-xl shadow hover:shadow-md transition";
+        tasks
+  .filter(task => {
+    const matchesSearch = task.text.toLowerCase().includes(searchValue);
+    const matchesCategory = activeCategory === "all" || task.category === activeCategory;
+    return matchesSearch && matchesCategory;
+  })
+  .forEach((task, index) => {
+    const li = document.createElement("li");
+    li.className = "flex flex-col sm:flex-row sm:items-center justify-between bg-gray-100 dark:bg-gray-800 px-4 py-3 rounded-xl shadow hover:shadow-md transition";
 
-          // Task row
-          const taskRow = document.createElement("div");
-          taskRow.className = "flex items-center gap-3 w-full";
+    // Task row
+    const taskRow = document.createElement("div");
+    taskRow.className = "flex items-center gap-3 w-full";
 
+    // Task text
+    const input = document.createElement("input");
+    input.type = "text";
+    input.value = task.text;
+    input.readOnly = !task.editing;
+    input.className = "flex-grow bg-transparent border-0 focus:ring-0 " + 
+      (task.completed ? "line-through text-gray-400" : "text-gray-700 dark:text-gray-200");
+    input.onchange = (e) => { task.text = e.target.value; task.editing = false; saveTasks(); renderTasks(); };
+
+    taskRow.appendChild(input);
+
+    // Append row to li
+    li.appendChild(taskRow);
+
+    taskList.appendChild(li);
+  });
           // Editable text
           const input = document.createElement("input");
           input.type = "text";
@@ -142,9 +161,16 @@
 
           // Delete button
           const delBtn = document.createElement("button");
-          delBtn.innerHTML = "✖";
-          delBtn.className = "text-red-500 hover:text-red-700";
-          delBtn.onclick = () => deleteTask(index);
+    delBtn.textContent = "Delete";
+    delBtn.className =
+      "ml-3 px-2 py-1 bg-red-500 text-white rounded hover:bg-red-600";
+    delBtn.onclick = () => {
+      tasks.splice(index, 1); // remove task
+      saveTasks();
+      renderTasks();
+    };
+
+    taskRow.appendChild(delBtn);
 
           actions.appendChild(editBtn);
           actions.appendChild(delBtn);
@@ -152,10 +178,10 @@
           li.appendChild(taskRow);
           li.appendChild(actions);
           taskList.appendChild(li);
-        });
+        }
 
       saveTasks();
-    }
+    
 
     function addTask() {
   const input = document.getElementById("taskInput");
