--- a/index.html
+++ b/index.html
@@ -20,26 +20,26 @@
     })();
   </script>
 </head>
-<body class="bg-gray-950 text-gray-200 min-h-screen antialiased">
+<body class="bg-gray-100 text-gray-900 dark:bg-gray-950 dark:text-gray-200 min-h-screen antialiased">
   <!-- Main Card -->
   <div class="w-full max-w-2xl mx-auto px-4 sm:px-6 py-8">
-    <div class="bg-gray-900/80 backdrop-blur border border-gray-800 shadow-xl rounded-2xl p-6">
+    <div class="bg-white border border-gray-200 dark:bg-gray-900/80 dark:border-gray-800 backdrop-blur shadow-xl rounded-2xl p-6">
     <!-- Header -->
     <div class="flex justify-between items-center mb-6">
-      <h1 class="text-xl sm:text-2xl font-semibold tracking-tight text-white">My To‑Do List</h1>
-      <button id="darkToggle" class="px-3 py-1.5 rounded-lg text-sm bg-gray-800 border border-gray-700 text-gray-300 hover:bg-gray-750 hover:border-gray-600 transition">🌙</button>
+      <h1 class="text-xl sm:text-2xl font-semibold tracking-tight">My To‑Do List</h1>
+      <button id="darkToggle" class="px-3 py-1.5 rounded-lg text-sm bg-gray-200 border border-gray-300 text-gray-800 hover:bg-gray-300 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-300 dark:hover:bg-gray-700 transition">🌙</button>
     </div>
 
     <!-- Input Row -->
     <div class="flex flex-col sm:flex-row items-center gap-3 mb-4">
       <input id="taskInput" type="text" placeholder="Add a new task..."
-        class="flex-1 w-full px-3 py-2 rounded-lg bg-gray-800/70 text-gray-100 placeholder:text-gray-500 border border-gray-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:border-transparent" />
-      <select id="category" class="w-full sm:w-auto px-3 py-2 rounded-lg bg-gray-800/70 text-gray-100 border border-gray-700 focus:outline-none focus:ring-2 focus:ring-indigo-500">
+        class="flex-1 w-full px-3 py-2 rounded-lg bg-white text-gray-900 placeholder:text-gray-500 border border-gray-300 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:border-transparent dark:bg-gray-800/70 dark:text-gray-100 dark:border-gray-700" />
+      <select id="category" class="w-full sm:w-auto px-3 py-2 rounded-lg bg-white text-gray-900 border border-gray-300 focus:outline-none focus:ring-2 focus:ring-indigo-500 dark:bg-gray-800/70 dark:text-gray-100 dark:border-gray-700">
       <option value="work">💼 Work</option>
       <option value="personal">🏠 Personal</option>
       <option value="school">📚 School</option>
       </select>
-      <select id="priority" class="w-full sm:w-auto px-3 py-2 rounded-lg bg-gray-800/70 text-gray-100 border border-gray-700 focus:outline-none focus:ring-2 focus:ring-indigo-500">
+      <select id="priority" class="w-full sm:w-auto px-3 py-2 rounded-lg bg-white text-gray-900 border border-gray-300 focus:outline-none focus:ring-2 focus:ring-indigo-500 dark:bg-gray-800/70 dark:text-gray-100 dark:border-gray-700">
       <option value="low">🔵 Low</option>
       <option value="medium">🟡 Medium</option>
       <option value="high">🔴 High</option>
@@ -50,15 +50,15 @@
     
     <!-- Search -->
     <input id="searchInput" type="text" placeholder="Search tasks..."
-      class="w-full px-4 py-2 mb-4 rounded-lg bg-gray-800/70 text-gray-100 placeholder:text-gray-500 border border-gray-700 focus:outline-none focus:ring-2 focus:ring-indigo-500" 
+      class="w-full px-4 py-2 mb-4 rounded-lg bg-white text-gray-900 placeholder:text-gray-500 border border-gray-300 focus:outline-none focus:ring-2 focus:ring-indigo-500 dark:bg-gray-800/70 dark:text-gray-100 dark:border-gray-700" 
       oninput="renderTasks()" />
 
     <!-- Category Filter -->
     <div class="flex justify-center gap-2 mb-4">
-      <button onclick="filterCategory('all')" class="px-3 py-1.5 rounded-lg bg-gray-800 border border-gray-700 text-gray-300 hover:bg-gray-750 hover:border-gray-600 transition">All</button>
-      <button onclick="filterCategory('work')" class="px-3 py-1.5 rounded-lg bg-gray-800 border border-gray-700 text-gray-300 hover:bg-gray-750 hover:border-gray-600 transition">Work</button>
-      <button onclick="filterCategory('personal')" class="px-3 py-1.5 rounded-lg bg-gray-800 border border-gray-700 text-gray-300 hover:bg-gray-750 hover:border-gray-600 transition">Personal</button>
-      <button onclick="filterCategory('school')" class="px-3 py-1.5 rounded-lg bg-gray-800 border border-gray-700 text-gray-300 hover:bg-gray-750 hover:border-gray-600 transition">School</button>
+      <button onclick="filterCategory('all')" class="px-3 py-1.5 rounded-lg bg-gray-200 border border-gray-300 text-gray-800 hover:bg-gray-300 transition dark:bg-gray-800 dark:border-gray-700 dark:text-gray-300 dark:hover:bg-gray-700">All</button>
+      <button onclick="filterCategory('work')" class="px-3 py-1.5 rounded-lg bg-gray-200 border border-gray-300 text-gray-800 hover:bg-gray-300 transition dark:bg-gray-800 dark:border-gray-700 dark:text-gray-300 dark:hover:bg-gray-700">Work</button>
+      <button onclick="filterCategory('personal')" class="px-3 py-1.5 rounded-lg bg-gray-200 border border-gray-300 text-gray-800 hover:bg-gray-300 transition dark:bg-gray-800 dark:border-gray-700 dark:text-gray-300 dark:hover:bg-gray-700">Personal</button>
+      <button onclick="filterCategory('school')" class="px-3 py-1.5 rounded-lg bg-gray-200 border border-gray-300 text-gray-800 hover:bg-gray-300 transition dark:bg-gray-800 dark:border-gray-700 dark:text-gray-300 dark:hover:bg-gray-700">School</button>
     </div>
 
     <!-- Task List -->
@@ -89,7 +89,7 @@
   .forEach((task, index) => {
     const li = document.createElement("li");
     li.className =
-      "flex flex-col sm:flex-row sm:items-center justify-between bg-gray-850 px-4 py-3 rounded-xl border border-gray-800";
+      "flex flex-col sm:flex-row sm:items-center justify-between bg-gray-50 dark:bg-gray-800 px-4 py-3 rounded-xl border border-gray-200 dark:border-gray-800";
 
     // Task row
     const taskRow = document.createElement("div");
@@ -102,7 +102,7 @@
     input.readOnly = !task.editing;
     input.className =
       "flex-grow bg-transparent border-0 focus:ring-0 focus:outline-none " +
-      (task.completed ? "line-through text-gray-500" : "text-gray-200");
+      (task.completed ? "line-through text-gray-400 dark:text-gray-500" : "text-gray-900 dark:text-gray-200");
     input.onchange = (e) => {
       task.text = e.target.value;
       task.editing = false;
@@ -118,17 +118,17 @@
     prioritySpan.className =
       "text-xs font-semibold px-2 py-1 rounded-full border " +
       (task.priority === "high"
-        ? "bg-red-500/10 text-red-400 border-red-500/30"
+        ? "bg-red-100 text-red-700 border-red-200 dark:bg-red-500/10 dark:text-red-400 dark:border-red-500/30"
         : task.priority === "medium"
-        ? "bg-yellow-500/10 text-yellow-300 border-yellow-500/30"
-        : "bg-blue-500/10 text-blue-300 border-blue-500/30");
+        ? "bg-yellow-100 text-yellow-800 border-yellow-200 dark:bg-yellow-500/10 dark:text-yellow-300 dark:border-yellow-500/30"
+        : "bg-blue-100 text-blue-700 border-blue-200 dark:bg-blue-500/10 dark:text-blue-300 dark:border-blue-500/30");
     prioritySpan.textContent =
       task.priority.charAt(0).toUpperCase() + task.priority.slice(1);
 
     // Category label
     const categorySpan = document.createElement("span");
     categorySpan.className =
-      "text-xs font-semibold px-2 py-1 rounded-full bg-gray-800 text-gray-300 border border-gray-700";
+      "text-xs font-semibold px-2 py-1 rounded-full bg-gray-200 text-gray-800 border border-gray-300 dark:bg-gray-800 dark:text-gray-300 dark:border-gray-700";
     categorySpan.textContent =
       task.category.charAt(0).toUpperCase() + task.category.slice(1);
 
@@ -139,7 +139,7 @@
     // Edit button
     const editBtn = document.createElement("button");
     editBtn.innerHTML = task.editing ? "💾" : "✏️";
-    editBtn.className = "px-2 py-1 rounded-md text-indigo-400 hover:text-indigo-300 border border-transparent hover:border-indigo-500/30";
+    editBtn.className = "px-2 py-1 rounded-md text-indigo-700 hover:text-indigo-800 border border-transparent hover:border-indigo-300 dark:text-indigo-400 dark:hover:text-indigo-300 dark:hover:border-indigo-500/30";
     editBtn.onclick = () => {
       task.editing = !task.editing;
       renderTasks();
