--- a/index.html
+++ b/index.html
@@ -19,50 +19,71 @@
       if (shouldUseDark) document.documentElement.classList.add('dark');
     })();
   </script>
+  
 </head>
 <body class="bg-gray-100 text-gray-900 dark:bg-gray-950 dark:text-gray-200 min-h-screen antialiased">
-  <!-- Main Card -->
-  <div class="w-full max-w-2xl mx-auto px-4 sm:px-6 py-8">
-    <div class="bg-white border border-gray-200 dark:bg-gray-900/80 dark:border-gray-800 backdrop-blur shadow-xl rounded-2xl p-6">
-    <!-- Header -->
-    <div class="flex justify-between items-center mb-6">
-      <h1 class="text-xl sm:text-2xl font-semibold tracking-tight">My To‑Do List</h1>
-      <button id="darkToggle" class="px-3 py-1.5 rounded-lg text-sm bg-gray-200 border border-gray-300 text-gray-800 hover:bg-gray-300 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-300 dark:hover:bg-gray-700 transition">🌙</button>
+  <!-- Full-width grid layout -->
+  <div class="w-full max-w-7xl mx-auto px-4 sm:px-6 py-6">
+    <!-- Top bar -->
+    <div class="flex items-center justify-between mb-6">
+      <div class="flex items-center gap-3">
+        <div class="h-10 w-10 rounded-xl bg-gradient-to-br from-indigo-500 to-purple-600 shadow ring-1 ring-indigo-400/30 flex items-center justify-center text-white font-semibold">TD</div>
+        <div>
+          <h1 class="text-xl sm:text-2xl font-semibold tracking-tight"><span class="bg-gradient-to-r from-indigo-500 to-purple-400 bg-clip-text text-transparent">My To‑Do List</span></h1>
+          <p class="text-xs text-gray-500 dark:text-gray-400">Stay organized, stay focused</p>
+        </div>
+      </div>
+      <div class="flex items-center gap-3">
+        <span class="inline-flex items-center gap-1 text-xs px-2 py-1 rounded-full bg-gray-200 text-gray-800 border border-gray-300 dark:bg-gray-800 dark:text-gray-300 dark:border-gray-700"><span id="taskCount">0</span> tasks</span>
+        <button id="darkToggle" class="px-3 py-1.5 rounded-lg text-sm bg-gray-200 border border-gray-300 text-gray-800 hover:bg-gray-300 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-300 dark:hover:bg-gray-700 transition" aria-label="Toggle dark mode">🌙</button>
+      </div>
     </div>
 
-    <!-- Input Row -->
-    <div class="flex flex-col sm:flex-row items-center gap-3 mb-4">
-      <input id="taskInput" type="text" placeholder="Add a new task..."
-        class="flex-1 w-full px-3 py-2 rounded-lg bg-white text-gray-900 placeholder:text-gray-500 border border-gray-300 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:border-transparent dark:bg-gray-800/70 dark:text-gray-100 dark:border-gray-700" />
-      <select id="category" class="w-full sm:w-auto px-3 py-2 rounded-lg bg-white text-gray-900 border border-gray-300 focus:outline-none focus:ring-2 focus:ring-indigo-500 dark:bg-gray-800/70 dark:text-gray-100 dark:border-gray-700">
-      <option value="work">💼 Work</option>
-      <option value="personal">🏠 Personal</option>
-      <option value="school">📚 School</option>
-      </select>
-      <select id="priority" class="w-full sm:w-auto px-3 py-2 rounded-lg bg-white text-gray-900 border border-gray-300 focus:outline-none focus:ring-2 focus:ring-indigo-500 dark:bg-gray-800/70 dark:text-gray-100 dark:border-gray-700">
-      <option value="low">🔵 Low</option>
-      <option value="medium">🟡 Medium</option>
-      <option value="high">🔴 High</option>
-      </select>
-      <button onclick="addTask()"
-        class="px-4 py-2 bg-indigo-600 text-white font-medium rounded-lg hover:bg-indigo-500 focus:outline-none focus:ring-2 focus:ring-indigo-500 w-full sm:w-auto">Add</button>
-    </div>
-    
-    <!-- Search -->
-    <input id="searchInput" type="text" placeholder="Search tasks..."
-      class="w-full px-4 py-2 mb-4 rounded-lg bg-white text-gray-900 placeholder:text-gray-500 border border-gray-300 focus:outline-none focus:ring-2 focus:ring-indigo-500 dark:bg-gray-800/70 dark:text-gray-100 dark:border-gray-700" 
-      oninput="renderTasks()" />
+    <div class="grid grid-cols-1 lg:grid-cols-3 gap-6">
+      <!-- Left column: inputs & filters -->
+      <div class="space-y-6">
+        <div class="bg-white border border-gray-200 dark:bg-gray-900/80 dark:border-gray-800 backdrop-blur shadow rounded-2xl p-5">
+          <h2 class="text-base font-medium mb-4">New Task</h2>
+          <div class="flex flex-col gap-3">
+            <input id="taskInput" type="text" placeholder="Add a new task..."
+              class="w-full px-3 py-2 rounded-lg bg-white text-gray-900 placeholder:text-gray-500 border border-gray-300 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:border-transparent dark:bg-gray-800/70 dark:text-gray-100 dark:border-gray-700" />
+            <div class="flex flex-col sm:flex-row gap-3">
+              <select id="category" class="w-full sm:w-1/2 px-3 py-2 rounded-lg bg-white text-gray-900 border border-gray-300 focus:outline-none focus:ring-2 focus:ring-indigo-500 dark:bg-gray-800/70 dark:text-gray-100 dark:border-gray-700">
+                <option value="work">💼 Work</option>
+                <option value="personal">🏠 Personal</option>
+                <option value="school">📚 School</option>
+              </select>
+              <select id="priority" class="w-full sm:w-1/2 px-3 py-2 rounded-lg bg-white text-gray-900 border border-gray-300 focus:outline-none focus:ring-2 focus:ring-indigo-500 dark:bg-gray-800/70 dark:text-gray-100 dark:border-gray-700">
+                <option value="low">🔵 Low</option>
+                <option value="medium">🟡 Medium</option>
+                <option value="high">🔴 High</option>
+              </select>
+            </div>
+            <button onclick="addTask()" class="w-full px-4 py-2 bg-indigo-600 text-white font-medium rounded-lg hover:bg-indigo-500 focus:outline-none focus:ring-2 focus:ring-indigo-500">Add Task</button>
+          </div>
+        </div>
 
-    <!-- Category Filter -->
-    <div class="flex justify-center gap-2 mb-4">
-      <button onclick="filterCategory('all')" class="px-3 py-1.5 rounded-lg bg-gray-200 border border-gray-300 text-gray-800 hover:bg-gray-300 transition dark:bg-gray-800 dark:border-gray-700 dark:text-gray-300 dark:hover:bg-gray-700">All</button>
-      <button onclick="filterCategory('work')" class="px-3 py-1.5 rounded-lg bg-gray-200 border border-gray-300 text-gray-800 hover:bg-gray-300 transition dark:bg-gray-800 dark:border-gray-700 dark:text-gray-300 dark:hover:bg-gray-700">Work</button>
-      <button onclick="filterCategory('personal')" class="px-3 py-1.5 rounded-lg bg-gray-200 border border-gray-300 text-gray-800 hover:bg-gray-300 transition dark:bg-gray-800 dark:border-gray-700 dark:text-gray-300 dark:hover:bg-gray-700">Personal</button>
-      <button onclick="filterCategory('school')" class="px-3 py-1.5 rounded-lg bg-gray-200 border border-gray-300 text-gray-800 hover:bg-gray-300 transition dark:bg-gray-800 dark:border-gray-700 dark:text-gray-300 dark:hover:bg-gray-700">School</button>
-    </div>
+        <div class="bg-white border border-gray-200 dark:bg-gray-900/80 dark:border-gray-800 backdrop-blur shadow rounded-2xl p-5">
+          <h2 class="text-base font-medium mb-4">Filters</h2>
+          <input id="searchInput" type="text" placeholder="Search tasks..."
+            class="w-full px-3 py-2 mb-3 rounded-lg bg-white text-gray-900 placeholder:text-gray-500 border border-gray-300 focus:outline-none focus:ring-2 focus:ring-indigo-500 dark:bg-gray-800/70 dark:text-gray-100 dark:border-gray-700" 
+            oninput="renderTasks()" />
+          <div class="flex flex-wrap gap-2">
+            <button onclick="filterCategory('all')" class="px-3 py-1.5 rounded-lg bg-gray-200 border border-gray-300 text-gray-800 hover:bg-gray-300 transition dark:bg-gray-800 dark:border-gray-700 dark:text-gray-300 dark:hover:bg-gray-700">All</button>
+            <button onclick="filterCategory('work')" class="px-3 py-1.5 rounded-lg bg-gray-200 border border-gray-300 text-gray-800 hover:bg-gray-300 transition dark:bg-gray-800 dark:border-gray-700 dark:text-gray-300 dark:hover:bg-gray-700">Work</button>
+            <button onclick="filterCategory('personal')" class="px-3 py-1.5 rounded-lg bg-gray-200 border border-gray-300 text-gray-800 hover:bg-gray-300 transition dark:bg-gray-800 dark:border-gray-700 dark:text-gray-300 dark:hover:bg-gray-700">Personal</button>
+            <button onclick="filterCategory('school')" class="px-3 py-1.5 rounded-lg bg-gray-200 border border-gray-300 text-gray-800 hover:bg-gray-300 transition dark:bg-gray-800 dark:border-gray-700 dark:text-gray-300 dark:hover:bg-gray-700">School</button>
+          </div>
+        </div>
+      </div>
 
-    <!-- Task List -->
-    <ul id="taskList" class="space-y-2"></ul>
+      <!-- Right column: task list -->
+      <div class="lg:col-span-2">
+        <div class="bg-white border border-gray-200 dark:bg-gray-900/80 dark:border-gray-800 backdrop-blur shadow rounded-2xl p-5">
+          <h2 class="text-base font-medium mb-4">Tasks</h2>
+          <ul id="taskList" class="space-y-2"></ul>
+        </div>
+      </div>
     </div>
   </div>
 
@@ -79,6 +100,9 @@
       const taskList = document.getElementById("taskList");
       const searchValue = document.getElementById("searchInput").value.toLowerCase();
       taskList.innerHTML = "";
+      // Update header task count
+      const taskCountEl = document.getElementById("taskCount");
+      if (taskCountEl) taskCountEl.textContent = tasks.length.toString();
 
       tasks
   .filter(task => {
