--- a/index.html
+++ b/index.html
@@ -6,51 +6,63 @@
   <title>Advanced To-Do List App</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <script>
-    // Enable Tailwind dark mode
-    tailwind.config = { darkMode: 'class' };
+    tailwind.config = { darkMode: 'class' }; // enable dark mode
   </script>
   <meta name="color-scheme" content="dark light">
+
   <script>
-    // Initialize theme: default to dark, persist preference
+    // set dark mode by default, keep user preference
     (function() {
-      const stored = localStorage.getItem('theme');
+      const saved = localStorage.getItem('theme');
       const prefersDark = window.matchMedia('(prefers-color-scheme: dark)').matches;
-      const shouldUseDark = stored ? stored === 'dark' : prefersDark || true;
-      if (shouldUseDark) document.documentElement.classList.add('dark');
+      const useDark = saved ? saved === 'dark' : prefersDark || true;
+      if (useDark) document.documentElement.classList.add('dark');
     })();
   </script>
-  
 </head>
+
 <body class="bg-gray-100 text-gray-900 dark:bg-gray-950 dark:text-gray-200 min-h-screen antialiased">
+
+  <!-- top bar -->
   <div class="w-full max-w-7xl mx-auto px-4 sm:px-6 py-6">
     <div class="sticky top-0 z-50 -mx-4 sm:-mx-6 mb-6">
       <div class="px-4 sm:px-6 py-3 bg-white/70 dark:bg-gray-900/70 backdrop-blur border-b border-gray-200 dark:border-gray-800 flex items-center justify-between">
         <div class="flex items-center gap-3">
           <div class="h-10 w-10 rounded-xl bg-gradient-to-br from-indigo-500 to-purple-600 shadow ring-1 ring-indigo-400/30 flex items-center justify-center text-white">
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" class="h-6 w-6">
+            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2" class="h-6 w-6">
               <path stroke-linecap="round" stroke-linejoin="round" d="M9 12.75l2.25 2.25L15 11.25" />
               <rect x="3.5" y="4" width="17" height="16" rx="3" ry="3" class="fill-white/10" />
             </svg>
           </div>
           <div>
-            <h1 class="text-xl sm:text-2xl font-semibold tracking-tight"><span class="bg-gradient-to-r from-indigo-500 to-purple-400 bg-clip-text text-transparent">My To‑Do List</span></h1>
+            <h1 class="text-xl sm:text-2xl font-semibold tracking-tight">
+              <span class="bg-gradient-to-r from-indigo-500 to-purple-400 bg-clip-text text-transparent">My To-Do List</span>
+            </h1>
             <p class="text-xs text-gray-500 dark:text-gray-400">Stay organized, stay focused</p>
           </div>
         </div>
+
         <div class="flex items-center gap-3">
-          <span class="inline-flex items-center gap-1 text-xs px-2 py-1 rounded-full bg-gray-200 text-gray-800 border border-gray-300 dark:bg-gray-800 dark:text-gray-300 dark:border-gray-700"><span id="taskCount">0</span> tasks</span>
-          <button id="darkToggle" class="px-3 py-1.5 rounded-lg text-sm bg-gray-200 border border-gray-300 text-gray-800 hover:bg-gray-300 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-300 dark:hover:bg-gray-700 transition" aria-label="Toggle dark mode">🌙</button>
+          <span class="inline-flex items-center gap-1 text-xs px-2 py-1 rounded-full bg-gray-200 text-gray-800 border border-gray-300 dark:bg-gray-800 dark:text-gray-300 dark:border-gray-700">
+            <span id="taskCount">0</span> tasks
+          </span>
+          <button id="darkToggle" class="px-3 py-1.5 rounded-lg text-sm bg-gray-200 border border-gray-300 text-gray-800 hover:bg-gray-300 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-300 dark:hover:bg-gray-700 transition">
+            🌙
+          </button>
         </div>
       </div>
     </div>
 
+    <!-- main layout -->
     <div class="grid grid-cols-1 lg:grid-cols-3 gap-6">
+
+      <!-- new task section -->
       <div class="space-y-6">
         <div class="bg-white border border-gray-200 dark:bg-gray-900/80 dark:border-gray-800 backdrop-blur shadow rounded-2xl p-5">
           <h2 class="text-base font-medium mb-4">New Task</h2>
           <div class="flex flex-col gap-3">
             <input id="taskInput" type="text" placeholder="Add a new task..."
-              class="w-full px-3 py-2 rounded-lg bg-white text-gray-900 placeholder:text-gray-500 border border-gray-300 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:border-transparent dark:bg-gray-800/70 dark:text-gray-100 dark:border-gray-700" />
+              class="w-full px-3 py-2 rounded-lg bg-white text-gray-900 placeholder:text-gray-500 border border-gray-300 focus:outline-none focus:ring-2 focus:ring-indigo-500 dark:bg-gray-800/70 dark:text-gray-100 dark:border-gray-700" />
             <div class="flex flex-col sm:flex-row gap-3">
               <select id="category" class="w-full sm:w-1/2 px-3 py-2 rounded-lg bg-white text-gray-900 border border-gray-300 focus:outline-none focus:ring-2 focus:ring-indigo-500 dark:bg-gray-800/70 dark:text-gray-100 dark:border-gray-700">
                 <option value="work">💼 Work</option>
@@ -67,21 +79,21 @@
           </div>
         </div>
 
+        <!-- filters -->
         <div class="bg-white border border-gray-200 dark:bg-gray-900/80 dark:border-gray-800 backdrop-blur shadow rounded-2xl p-5">
           <h2 class="text-base font-medium mb-4">Filters</h2>
-          <input id="searchInput" type="text" placeholder="Search tasks..."
-            class="w-full px-3 py-2 mb-3 rounded-lg bg-white text-gray-900 placeholder:text-gray-500 border border-gray-300 focus:outline-none focus:ring-2 focus:ring-indigo-500 dark:bg-gray-800/70 dark:text-gray-100 dark:border-gray-700" 
-            oninput="renderTasks()" />
+          <input id="searchInput" type="text" placeholder="Search tasks..." oninput="renderTasks()"
+            class="w-full px-3 py-2 mb-3 rounded-lg bg-white text-gray-900 placeholder:text-gray-500 border border-gray-300 focus:outline-none focus:ring-2 focus:ring-indigo-500 dark:bg-gray-800/70 dark:text-gray-100 dark:border-gray-700" />
           <div class="flex flex-wrap gap-2">
-            <button onclick="filterCategory('all')" class="px-3 py-1.5 rounded-lg bg-gray-200 border border-gray-300 text-gray-800 hover:bg-gray-300 transition dark:bg-gray-800 dark:border-gray-700 dark:text-gray-300 dark:hover:bg-gray-700">All</button>
-            <button onclick="filterCategory('work')" class="px-3 py-1.5 rounded-lg bg-gray-200 border border-gray-300 text-gray-800 hover:bg-gray-300 transition dark:bg-gray-800 dark:border-gray-700 dark:text-gray-300 dark:hover:bg-gray-700">Work</button>
-            <button onclick="filterCategory('personal')" class="px-3 py-1.5 rounded-lg bg-gray-200 border border-gray-300 text-gray-800 hover:bg-gray-300 transition dark:bg-gray-800 dark:border-gray-700 dark:text-gray-300 dark:hover:bg-gray-700">Personal</button>
-            <button onclick="filterCategory('school')" class="px-3 py-1.5 rounded-lg bg-gray-200 border border-gray-300 text-gray-800 hover:bg-gray-300 transition dark:bg-gray-800 dark:border-gray-700 dark:text-gray-300 dark:hover:bg-gray-700">School</button>
+            <button onclick="filterCategory('all')" class="filter-btn">All</button>
+            <button onclick="filterCategory('work')" class="filter-btn">Work</button>
+            <button onclick="filterCategory('personal')" class="filter-btn">Personal</button>
+            <button onclick="filterCategory('school')" class="filter-btn">School</button>
           </div>
         </div>
       </div>
 
-    <!-- Right column: task list -->
+      <!-- task list -->
       <div class="lg:col-span-2">
         <div class="bg-white border border-gray-200 dark:bg-gray-900/80 dark:border-gray-800 backdrop-blur shadow rounded-2xl p-5">
           <h2 class="text-base font-medium mb-4">Tasks</h2>
@@ -91,9 +103,11 @@
     </div>
   </div>
 
-  <!-- Additional features at the bottom -->
+  <!-- bottom section -->
   <div class="w-full max-w-7xl mx-auto px-4 sm:px-6 pb-10">
     <div class="grid grid-cols-1 lg:grid-cols-3 gap-6">
+
+      <!-- quick actions -->
       <div class="lg:col-span-2">
         <div class="bg-white border border-gray-200 dark:bg-gray-900/80 dark:border-gray-800 backdrop-blur shadow rounded-2xl p-5">
           <h2 class="text-base font-medium mb-4">Quick Actions</h2>
@@ -108,7 +122,7 @@
         </div>
       </div>
 
-      <!-- Stats -->
+      <!-- stats -->
       <div>
         <div class="bg-white border border-gray-200 dark:bg-gray-900/80 dark:border-gray-800 backdrop-blur shadow rounded-2xl p-5">
           <h2 class="text-base font-medium mb-4">Stats</h2>
@@ -128,8 +142,12 @@
           </div>
         </div>
       </div>
+
     </div>
   </div>
+</body>
+</html>
+
 
   <script>
     let tasks = JSON.parse(localStorage.getItem("tasks")) || [];
